poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  labels:
    app: poll
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: poll
