result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    app: result
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: result
